@startuml
!include ../common/style.puml

left to right direction
skinparam linetype ortho
skinparam defaultFontSize 12

entity "VPP01_RequestHeader" as H {
  * Id : uniqueidentifier <<PK>>
  --
  VPPCode : nvarchar(64) <<UQ>>
  * Y, M : int
  * Status : int
  * IsAdditionalOrder : bit
  SettledAt : datetime2
  SettledByPriceListId : uniqueidentifier <<FK>>
}

entity "VPP02_RequestDetail" as D {
  * Id : uniqueidentifier <<PK>>
  --
  * VPP01_RequestHeaderId : uniqueidentifier <<FK>>
  * VPPId : uniqueidentifier <<FK>>
  * Qty : int
  CurrentSinglePrice : bigint
}

entity "VPP03_Log" as L {
  * Id : uniqueidentifier <<PK>>
  --
  * VPP01_RequestHeaderId : uniqueidentifier <<FK>>
  LogTitle : nvarchar(255)
  * LogDate : datetime2
}

entity "N01_Notification" as N {
  * Id : uniqueidentifier <<PK>>
  --
  * UserId : int <<REF>>
  * MemberCompanyCode : nvarchar(50) <<REF>>
  * Type : nvarchar(50)
  CorrelationId : nvarchar(100)
  * CreatedAt : datetime2
  ReadAt : datetime2
}

entity "L04_VPP" as ITEM {
  * Id : uniqueidentifier <<PK>>
  VPPCode : nvarchar(max)
}

entity "L07_PriceList" as PL {
  * Id : uniqueidentifier <<PK>>
  PriceListCode : nvarchar(50)
}

PL -[hidden]right- ITEM
D -[hidden]right- L
L -[hidden]right- N

PL ||--o{ H
ITEM ||--o{ D
H ||--|{ D
H ||--o{ L
H .. N

@enduml
